# Q-LLM

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  quantum.yaml
data/: tiny_corpus.txt
scripts/: eval.py  train.py
src/quantum_llm/: __init__.py  config.py  data.py  model.py  train_utils.py
src/quantum_llm/quantum/: __init__.py  base.py  factory.py  fake.py  pennylane_layer.py
tests/: test_model.py  test_quantum_adapter.py  test_tokenizer.py  test_train_step.py
